Couple dark mode fixes
Fix colors on raw data view.
Fix info box for run pace analysis.

--- a/scss/site/_dialog.scss
+++ b/scss/site/_dialog.scss
@@ -56,8 +56,6 @@
         }
 
         pre {
-            background: color.get(bg);
-            color: color.shade(accent2, 40%);
             padding: 1em 2em;
             white-space: pre;
             letter-spacing: 0;
